--- a/_posts/publications/2016-11-07-music-cv.md
+++ b/_posts/publications/2016-11-07-music-cv.md
@@ -101,6 +101,7 @@ Hoop Lane, dir. Mark Rosenblatt, writer Patrick Marber, ICA, London {% include m
 [Lyrical Alliance](http://www.dasharts.org.uk/archive/arabic/lyrical.html) - Arab Hip-hop Summit, prod. Josephine Burton for Dash Arts, Roundhouse London, UK  {% include music tag='curation' %}  
 <a href="{{table[0].url}}">The Table</a>, dir. Mark Down, Blind Summit, prod. Josephine Burton for Yad Arts, Soho Theatre, London and international (with Yaniv Fridel) {% include music tag='theatre' %}  
 <a href="{{shtetl[0].url}}">Louis Theroux - The Ultra Zionists</a>, dir. Andy Wells, BBC Films, UK {% include music tag='soundtrack' %}  
+[The Island - Al Jones]({{island[0].url}}), *Echoes From The Mountain*, Rif Mountain Records, UK (with Yaniv Fridel & Ben Mandelson) {% include music tag='production' %}{% include music tag='arrangement' %}{% include music tag='performance' %}   
 <h3>2011</h3>
 <a href="{{lazlo[0].url}}">Lazlo (Kistehen / Little Cow)</a>, *Venus EP*, self-release, UK {% include music tag='mixing' %}{% include music tag='songwriting' %}    
 <a href="{{lucy[0].url}}"> The Wild Ones</a>, dir. Lucy Kaye, UK (with Yaniv Fridel)  {% include music tag='soundtrack' %}     
@@ -119,8 +120,7 @@ Hoop Lane, dir. Mark Rosenblatt, writer Patrick Marber, ICA, London {% include m
 <a href="{{alik[0].url}}">Alec Kopyt</a>, *Raw EP*, UK (with Yaniv Fridel){% include music tag='production' %}{% include music tag='mix' %}{% include music tag='arrangement' %}  
 <a href="{{album61[0].url}}"> Album 61</a>, dir. Halil Efrat, Israel, 2012 (with Yaniv Fridel) {% include music tag='soundtrack' %}     
 <a href="http://peutetretheatre.co.uk/productions/draw-me-a-bird/">Draw Me A Bird</a>, dir. Daphna Attias, Peut-Etre, UK nationwide, 2013 (with Yaniv Fridel)  {% include music tag='theatre' %}   
-<a href="{{bg[0].url}}">The Other Seder - Bulgarian Vocal Trio</a>, prod. Josephine Burton for Dash Arts, Jackson's Lane, London {% include music tag='theatre' %}   
-[The Island - Al Jones]({{island[0].url}}), *Echoes From The Mountain*, Rif Mountain Records, UK (with Yaniv Fridel & Ben Mandelson) {% include music tag='production' %}{% include music tag='arrangement' %}{% include music tag='performance' %}   
+<a href="{{bg[0].url}}">The Other Seder - Bulgarian Vocal Trio</a>, prod. Josephine Burton for Dash Arts, Jackson's Lane, London {% include music tag='theatre' %}     
 [Autorap]({{app[0].url}}), app for IOS/Android, Khush/Smule (with Yaniv Fridel) {% include music tag='composition' %}   
 <h3>2014</h3>  
 <a href="{{yto[0].url}}">Yiddish Twist Orchestra</a>, *Let's*, Bergmanton, UK {% include music tag='production' %}{% include music tag='mix' %}{% include music tag='arrangement' %}          
@@ -132,42 +132,47 @@ Hoop Lane, dir. Mark Rosenblatt, writer Patrick Marber, ICA, London {% include m
 ***
 
 <h2>Selected Humblebrags</h2>
-<h4>Songwriting & Arrangement (Oi Va Voi)</h4>
-- ‘Memorable and melodic songwriting skills’    _Evening Standard_  
-- ‘Mesmerising, innovative music with substance.’   _New York Times_  
-- ‘Beautifully crafted and richly textured’   _The Sun_  
-- ‘[Music of] uncommon grace, diversity and beauty’   _BBCi_  
-- ‘Great tunes… a classic to rank alongside Everything But The Girl “Walking Wounded”’  _Sunday Telegraph_  
-- ‘The deluge of ideas leaves you breathless with wonder’   _Independent_  
-- ‘[Lemez Lovas is ]an impressive songwriter of growing stature’     _HMV Magazine_  
-- Top Ten Album of the Year, New York Times, 2003
-- Boundary Crossing Award shortlist, BBC Radio 3 Awards, 2003
-- Listeners Award shortlist, BBC Radio 3 Awards, 2003
-- No.1 World Music Album (European Broadcasting Union), Sept-Nov 2003
-- Critics Album of the Year shortlist, BBC Radio 3 Awards 2004
-- World Album Of The Year, Dutch National “Edison” Awards 2004
+{% include music tag='songwriting' %} {% include music tag='arrangement' %}   
 
-<h4>Theatre</h4>
-- Best New Work nomination for What We Did To Weinstein, 51st London Evening Standard Theatre Awards
-- ‘Lemez Lovas and Yaniv Fridel's low-level soundscapes are excellently disquieting’    _Financial Times_  
-- ‘Haunting soundscapes… played with aplomb’    _Time Out_ 
+> ‘Memorable and melodic songwriting skills’    _Evening Standard_  
+> ‘Mesmerising, innovative music with substance.’   _New York Times_  
+> ‘Beautifully crafted and richly textured’   _The Sun_  
+> ‘[Music of] uncommon grace, diversity and beauty’   _BBCi_  
+> ‘Great tunes… a classic to rank alongside Everything But The Girl “Walking Wounded”’  _Sunday Telegraph_  
+> ‘The deluge of ideas leaves you breathless with wonder’   _Independent_  
+> ‘[Lemez Lovas is ]an impressive songwriter of growing stature’     _HMV Magazine_  
+> 
+> Top Ten Album of the Year, New York Times, 2003  
+> Boundary Crossing Award shortlist, BBC Radio 3 Awards, 2003   
+> Listeners Award shortlist, BBC Radio 3 Awards, 2003   
+> No.1 World Music Album (European Broadcasting Union), Sept-Nov 2003     
+> Critics Album of the Year shortlist, BBC Radio 3 Awards 2004   
+> World Album Of The Year, Dutch National “Edison” Awards 2004   
 
-<h4>Film</h4>
-- Best Director, Documentary: Halil Efrat for Album 61, Jerusalem International FF, 2013 
-- Audience Prize, In the Shadow of King David, Nimes Archaeology Film Festival 2009
-- Best Soundtrack nomination, Ruth, Filmmaker Film Festival 2009
-- Best Film under 65 Mins, Ruth, Swansea Bay International Film Festival 2009 
+{% include music tag='theatre' %}   
+
+> ‘Lemez Lovas and Yaniv Fridel's low-level soundscapes are excellently disquieting’    _Financial Times_  
+> ‘Haunting soundscapes… played with aplomb’    _Time Out_   
+> Best New Work nomination for What We Did To Weinstein, 51st London Evening Standard Theatre Awards   
+
+{% include music tag='soundtrack' %}  
+
+> Best Director, Documentary: Halil Efrat for Album 61, Jerusalem International FF, 2013  
+> Audience Prize, In the Shadow of King David, Nimes Archaeology Film Festival 2009  
+> Best Soundtrack nomination, Ruth, Filmmaker Film Festival 2009  
+> Best Film under 65 Mins, Ruth, Swansea Bay International Film Festival 2009 
  
-<h4>Curation (Shtetl Superstars, Trikont)</h4> 
-- ‘A far-reaching, revitalising, boundary-pushing compilation’ _Songlines_  
-- ‘The most purely entertaining CD I’ve heard in a long time’ _fRoots_  
-- ‘One of the albums of the year,’  _20 Cent Magazine, Germany_  
+{% include music tag='curation' %}   
+
+> ‘A far-reaching, revitalising, boundary-pushing compilation’ _Songlines_   
+> ‘The most purely entertaining CD I’ve heard in a long time’ _fRoots_    
+> ‘One of the albums of the year,’  _20 Cent Magazine, Germany_   
 
 
 <!-- Rohan Theatre Band
 Beshodrom
 Second Train Meditation
-Staro Misto
+Stare Misto
 Ofer Bashan
 Khush - Autorap, Singing Santa, Songify -->
 
