--- a/_posts/music/2015-10-27-album-61.md
+++ b/_posts/music/2015-10-27-album-61.md
@@ -13,7 +13,7 @@ producer: MYTV
 area: film
 venue: 
 location: [Israel, India, Belarus]
-video: WWUz0CHZznk
+video: h7pPojklgo0
 videotext: "Album 61, full feature documentary"
 people: [Yaniv Fridel - mix/production/composition, Ben Mandelson - guitar]
 tags: [Israel, India, Belarus, soundtrack, film]
